# mod_audio_stream

./: CMakeLists.txt  README.md  audio_streamer_glue.cpp  audio_streamer_glue.h  g711.h  mod_audio_stream.c  mod_audio_stream.h  work_ai.py  work_default.xml  work_push_back_audio.py  wss.pem
tests/: test_standalone.cpp
tools/: pushback_ws_server.py  verify_pushback_logs.py  ws_bidi_selftest.py
